Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112208

Assignment to a list property emits property change event for every item in the list

    XMLWordPrintable

Details

    • 7656d4922 (dev)

    Description

      To reproduce, run attached example and click "Replace lists"

      It will output change to the targetList1 property as many times as there are items in the list of items that is assigned, instead of just a single change event when the whole list changes.

      This behavior easily causes performance issues if the property is used with Repeater as it causes items to be recreated as many times as there are items in the list.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              mikolaj.boc MikoĊ‚aj Boc (Inactive)
              poikelin Joni Poikelin
              Votes:
              1 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes